--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Thanks to <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </a></span></small></p>
 				<ul>
-					<li><a href="https://www.facebook.com/profile.php?id=100002158816472"><i class="icon-facebook2"></i></a></li>
-					<li><a href="https://www.instagram.com/ericychi__/"><i class="icon-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/yucheng-chi/"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
+					<li><a href="https://www.instagram.com/ericychi__/" target="blank"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/yucheng-chi/" target="blank"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
@@ -98,7 +98,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 											<h1>Hey Y'all! <br>I'm Eric</h1>
-										 		<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1jZCDNVBCqv0ZLyzsW-Xk6wTGeEi-rc73/view?usp=sharing">Download CV <i class="icon-download4"></i></a></p>
+										 		<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1jZCDNVBCqv0ZLyzsW-Xk6wTGeEi-rc73/view?usp=sharing" target="blank">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div> 
@@ -113,7 +113,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Designer</h1>
-												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" >View LinkedIn <i class="icon-briefcase3"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" target="blank">View LinkedIn <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -172,7 +172,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>Wanna know more about me? <br> Download my resume below!</h2>
-										<a href="https://drive.google.com/file/d/1jZCDNVBCqv0ZLyzsW-Xk6wTGeEi-rc73/view?usp=sharing" class="btn-hire">Download CV</a>
+										<a href="https://drive.google.com/file/d/1jZCDNVBCqv0ZLyzsW-Xk6wTGeEi-rc73/view?usp=sharing" class="btn-hire" target="blank">Download CV</a>
 									</div>
 								</div>
 							</div>
@@ -198,7 +198,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h1><a href="work.html">Work 01</a></h1>
+										<h1><a href="work.html" target="blank">Work 01</a></h1>
 										<span>Website</span>
 									</div>
 								</div>
