--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 											<h1>Hey Y'all! <br>I'm Eric</h1>
-										 		<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1CQiBwhw1LFsk1AyKXWi3TyA21M-wCQUu/view?usp=sharing" target="blank">Download CV <i class="icon-download4"></i></a></p>
+										 		<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1CQiBwhw1LFsk1AyKXWi3TyA21M-wCQUu/view?usp=sharing" target="blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div> 
@@ -111,7 +111,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Designer</h1>
-												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" target="blank">View LinkedIn <i class="icon-briefcase3"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" target="blank">View LinkedIn <i class="icon-linkedin22"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
