--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/eric.svg);"></div>
+				<a href="index.html"><div class="author-img" style="background-image: url(images/eric.svg);"></div></a>
 				<span class="position"><p>UI/UX Designer</p></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
