--- a/work.html
+++ b/work.html
@@ -45,10 +45,10 @@
 
 
 
-      <<video autoplay loop width="50%" height="30%">
+     <!-- <video autoplay loop width="50%" height="30%">
       	 <source src="work/img/Socool1.mp4" type="video/mp4">
 			"Your browser does not support the video tag."
-       	</video> 
+       	</video> --> 
       
 
 
