--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html class="js">
+<html>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,8 +20,6 @@
 	<meta name="twitter:url" content="ycchi.com" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -51,7 +49,7 @@
 
 	</head>
 	<body>
-	<div id="preloader"></div>
+	
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -73,9 +71,8 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Made with  <a href="https://colorlib.com" target="_blank">❤</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </a></span></small></p>
+				<p><small>&copy; 
+Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Made with  <a href="https://colorlib.com" target="_blank">❤</a> </a></span></small></p>
 				<ul>
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://www.instagram.com/ericychi__/" target="blank"><i class="icon-instagram"></i></a></li>
@@ -397,10 +394,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						
 			</section>
 
-		</div><!-- end:colorlib-main -->
-	</div><!-- end:container-wrap -->
-	</div><!-- end:colorlib-page -->
-
+		</div>
+	</div>
+	</div>
+	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
