--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	</head>
 	<body>
-	
+	<div class="loader" id="loader"> <img src="images/preloader.gif"></div> 
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -398,6 +398,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 	</div>
 	</div>
 	
+	
+		
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -415,6 +417,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
+
+	<script type="text/javascript">
+
+	$('#loader').fadeIn('fast').delay(2000).fadeOut('slow');
+	
+	</script>
 
 	</body>
 </html>
