--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Collaboration</h3>
-									<p><strong>Teamwork <br> makes  <br> the <br> dream <br>work.</strong> <br>
+									<p>Teamwork <br> makes  <br> the <br> dream <br>work. <br>
 									I embrace the opportunity to from others. </p>
 								</div>
 							</div>
@@ -332,19 +332,19 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="99" data-speed="250000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="99" data-speed="125000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="37" data-speed="7500" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="37" data-speed="3000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Partners</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="413" data-speed="7500" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="277" data-speed="3000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Tacos</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="293" data-to="1" data-speed="7500" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="293" data-to="1" data-speed="3000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Love</span>
 						</div>
 					</div>
